--- a/doc/latex/structnode.tex
+++ b/doc/latex/structnode.tex
@@ -11,8 +11,7 @@ Define node for a doubly linked list.
 
 
 
-Collaboration diagram for node\+:
-\nopagebreak
+Collaboration diagram for node\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
