added documentation for list and table

--- a/doc/latex/md_README.tex
+++ b/doc/latex/md_README.tex
@@ -1,1 +1,6 @@
-Text-\/based implementation of a spell checker in C 
+Text-\/based implementation of a spell checker in C
+
+How to use\+: {\ttfamily bin/spellcheck \mbox{[}filename\mbox{]} \mbox{[}optional dictionary\mbox{]}}
+
+Example\+: {\ttfamily bin/spellcheck Spell\+Check/test/test-\/files/tolstoy.\+txt}\hypertarget{md_README_autotoc_md1}{}\doxysection{Implementation}\label{md_README_autotoc_md1}
+Uses a custom hash function to hash words and load them into a hash table. The hash table is an array of doubly-\/linked lists. 
