--- a/doc/latex/refman.tex
+++ b/doc/latex/refman.tex
@@ -171,7 +171,7 @@
 \hypersetup{pageanchor=true}
 
 %--- Begin generated contents ---
-\chapter{Spell\+Check}
+\chapter{Spell\+Check v1.0}
 \label{md_README}
 \Hypertarget{md_README}
 \input{md_README}
